--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@
         background-color: var(--main-color);
         color: var(--neutral-bg);
         overflow: hidden;
-        max-height: 500px;
+        max-height: 400px;
         padding: 0;
     }
 
@@ -365,8 +365,8 @@
       margin-top: 5px;
     }
 
-    /* -------------------------------- FAQs Page -------------------------------- */
-    .faq-hero {
+    /* -------------------------------- Page Heros ------------------------------- */
+    .page-hero {
         display: flex;
         align-items: stretch;           
         position: relative;
@@ -378,7 +378,7 @@
         margin-bottom: 30px;
     }
 
-    .faq-hero-text {
+    .page-hero-text {
         flex: 1;                        
         padding: 20px 10px;            
         display: flex;
@@ -388,14 +388,14 @@
         gap: 20px;                      
         padding: 50px;
     }
-    .faq-hero-img {
+    .page-hero-img {
         flex: 1;
         position: relative;     
         background-image: url('/images/laptop-on-desk.png');
         background-size: cover;     
         background-position: center; 
     }
-    .faq-hero-img::before {
+    .page-hero-img::before {
         content: "";
         position: absolute;
         top: 0;
@@ -406,27 +406,39 @@
         pointer-events: none;
     }
 
-    .faq-hero-text h1 {
+    .page-hero-text h1 {
         font-size: 2.5rem;
         margin: 0 0 5px 0;
     }
-    .faq-hero-text h1::after {
+    .page-hero-text h1::after {
         content: "";
         display: block;
-        width: 550px;             
+        width: 100%;             
         height: 1px;            
         background-color: var(--neutral-bg);
         margin-top: 10px;        
         margin: 0px auto 0 auto;
     }
-    .faq-hero-text h3 {
+    .page-hero-text h3 {
         font-weight: 400;
         margin-bottom: 20px;
         color: var(--neutral-bg);
     }
-    .faq-hero-text p {
-        margin-bottom: 20px;
-    }
+
+    /* -------------------------------- About Page ------------------------------- */
+
+    /* -------------------------------- Services Page ------------------------------- */
+
+    /* -------------------------------- Services Page - MAA ------------------------------- */
+
+    /* -------------------------------- Services Page - PPD ------------------------------- */
+
+    /* -------------------------------- Services Page - PPS ------------------------------- */
+
+    /* -------------------------------- Services Page - FSC ------------------------------- */
+
+    /* -------------------------------- FAQs Page -------------------------------- */
+    
 
     /* FAQs */
     .faq-category {
@@ -514,6 +526,9 @@
     .get-in-touch-btn:hover {
         opacity: 0.9;
     }
+
+    /* -------------------------------- Contact Page ------------------------------- */
+
 
     /* -------------------------------- Footer -------------------------------- */
     footer {
