--- a/css/style.css
+++ b/css/style.css
@@ -114,12 +114,6 @@
         gap: 20px;                      
         padding: 50px;
     }
-    .hero-btn {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 10px;
-    }
 
     .hero-img {
         flex: 1;                       
@@ -165,16 +159,26 @@
     .hero-text p {
         margin-bottom: 20px;
     }
+    .hero-btn {
+        display: flex;
+        justify-content: flex-start;
+        padding: 0px 10;
+        width: 100%;
+    }
     .btn-learn {
-        display: block;
-        width: fit-content;
-        margin: 20px auto 0; 
         background-color: var(--accent-color);
         color: var(--neutral-bg);
         padding: 12px 30px;
         border-radius: 5px;
         font-weight: 600;
-        margin-top: 20px;
+        border: none;
+        cursor: pointer;
+        white-space: nowrap;     /* prevents wrapping on small screens */
+    }
+    @media (max-width: 768px) {
+        .hero-btn {
+            justify-content: center;
+        }
     }
     .btn-learn:hover {
         opacity: 0.9;
