--- a/css/style.css
+++ b/css/style.css
@@ -569,6 +569,31 @@
     }
 
     /* -------------------------------- Contact Page ------------------------------- */
+    .con-hero-btn {
+        display: flex;
+        justify-content: flex-start;
+        padding: 0px 10;
+        width: 100%;
+    }
+    .con-btn-learn {
+        background-color: var(--accent-color);
+        color: var(--neutral-bg);
+        padding: 4px 30px;
+        border-radius: 5px;
+        font-weight: 600;
+        border: none;
+        cursor: pointer;
+        white-space: nowrap;   
+    }
+    @media (max-width: 768px) {
+        .con-hero-btn {
+            justify-content: center;
+        }
+    }
+    .con-btn-learn:hover {
+        opacity: 0.9;
+    }
+
     /* Layout Container */
     .contact-container {
         max-width: 1100px;
