mobile footer fix

--- a/css/style.css
+++ b/css/style.css
@@ -1305,6 +1305,9 @@
         .features {
             flex-direction: column;
         }
+        .footer-columns {
+            gap: 30px; 
+        }
         footer {
             flex-direction: column;
             text-align: center;
@@ -1312,6 +1315,5 @@
         footer h4::after {
             margin-left: auto;
             margin-right: auto;
-            /* This forces the 100px line to center regardless of text length */
         }
     }
